docs(security): F03-04 Phase 5 归档文档
- 04_test_spec.md: 测试规格（8 个测试用例，AC 覆盖矩阵）
- DECISIONS.md: 新增 ADR-032（ScopedValue.isBound() + get() 模式）
- SKILL.md: 新增 JV-001、JV-002（Java 21/ScopedValue 规则）